crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v101.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 101
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 9
          - secs: 0
            nanos: 15000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 8
          - secs: 0
            nanos: 30000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 28000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 10
          - secs: 0
            nanos: 54000000
      stake_weighted_median:
        secs: 0
        nanos: 54000000
  - - SplitCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 80000000
        - - 3
          - secs: 0
            nanos: 71000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 71000000
  - - TransferObjects
    - observations:
        - - 5
          - secs: 0
            nanos: 31000000
        - - 10
          - secs: 0
            nanos: 27000000
        - - 8
          - secs: 0
            nanos: 60000000
        - - 3
          - secs: 0
            nanos: 42000000
      stake_weighted_median:
        secs: 0
        nanos: 42000000
  - - Upgrade
    - observations:
        - - 3
          - secs: 0
            nanos: 759000000
        - - 7
          - secs: 0
            nanos: 657000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 759000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 4
          - secs: 0
            nanos: 397000000
      stake_weighted_median:
        secs: 0
        nanos: 397000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 378000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 10
          - secs: 0
            nanos: 109000000
      stake_weighted_median:
        secs: 0
        nanos: 142000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 397000000
  - - mixed_move_calls
    - secs: 0
      nanos: 539000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 390000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 210000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 355000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 162000000
  - - make_move_vec_5_elements
    - secs: 0
      nanos: 168000000
  - - mixed_commands
    - secs: 0
      nanos: 269000000
  - - upgrade_package
    - secs: 0
      nanos: 759000000
