crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v107.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 107
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 8
          - secs: 0
            nanos: 12000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 6
          - secs: 0
            nanos: 8000000
        - - 6
          - secs: 0
            nanos: 10000000
      stake_weighted_median:
        secs: 0
        nanos: 12000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 8
          - secs: 0
            nanos: 41000000
        - - 7
          - secs: 0
            nanos: 38000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 41000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 74000000
        - - 7
          - secs: 0
            nanos: 70000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 70000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 66000000
        - - 9
          - secs: 0
            nanos: 82000000
      stake_weighted_median:
        secs: 0
        nanos: 82000000
  - - Upgrade
    - observations:
        - - 4
          - secs: 0
            nanos: 137000000
        - - 8
          - secs: 0
            nanos: 650000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 650000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 4
          - secs: 0
            nanos: 50000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 76000000
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 379000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 379000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 647000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 410000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 164000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 280000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 164000000
  - - make_move_vec_2_elements
    - secs: 0
      nanos: 36000000
  - - mixed_commands
    - secs: 0
      nanos: 387000000
  - - upgrade_package
    - secs: 0
      nanos: 650000000
