crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v109.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 109
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 8
          - secs: 0
            nanos: 26000000
        - - 10
          - secs: 0
            nanos: 16000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 56000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 8
          - secs: 0
            nanos: 35000000
      stake_weighted_median:
        secs: 0
        nanos: 54000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 39000000
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 50000000
      stake_weighted_median:
        secs: 0
        nanos: 50000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 391000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 10
          - secs: 0
            nanos: 559000000
      stake_weighted_median:
        secs: 0
        nanos: 559000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 8
          - secs: 0
            nanos: 66000000
        - - 8
          - secs: 0
            nanos: 469000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 3
          - secs: 0
            nanos: 346000000
      stake_weighted_median:
        secs: 0
        nanos: 346000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 4
          - secs: 0
            nanos: 260000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 379000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 379000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 346000000
  - - mixed_move_calls
    - secs: 0
      nanos: 725000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 322000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 300000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 270000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 128000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 125000000
  - - mixed_commands
    - secs: 0
      nanos: 259000000
  - - upgrade_package
    - secs: 0
      nanos: 559000000
