crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v110.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 110
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 25000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 9
          - secs: 0
            nanos: 5000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 8
          - secs: 0
            nanos: 34000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 7
          - secs: 0
            nanos: 20000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 21000000
  - - SplitCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 57000000
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 69000000
        - - 6
          - secs: 0
            nanos: 66000000
      stake_weighted_median:
        secs: 0
        nanos: 66000000
  - - TransferObjects
    - observations:
        - - 2
          - secs: 0
            nanos: 36000000
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 66000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 66000000
  - - Upgrade
    - observations:
        - - 6
          - secs: 0
            nanos: 849000000
        - - 7
          - secs: 0
            nanos: 937000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 937000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 4
          - secs: 0
            nanos: 96000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 326000000
        - - 4
          - secs: 0
            nanos: 228000000
        - - 10
          - secs: 0
            nanos: 409000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 409000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 677000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 344000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 330000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 198000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 42000000
  - - make_move_vec_0_elements
    - secs: 0
      nanos: 19000000
  - - mixed_commands
    - secs: 0
      nanos: 331000000
  - - upgrade_package
    - secs: 0
      nanos: 937000000
